# zennlogic_ai

./: .pre-commit-config.yaml  LICENSE  README.md  mcp.code-workspace  zennlogic_ai.code-workspace
.github/: copilot-instructions.md
.github/prompts/: debugging.prompt.md  new-feature.prompt.md
mcp-langgraph-rag/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
mcp-langgraph-rag/app/: __init__.py  mcp_server.py  settings.py
mcp-langgraph-rag/app/agents/: __init__.py  graph.py  llm.py
mcp-langgraph-rag/app/data/docs/: welcome.md
mcp-langgraph-rag/app/tools/: __init__.py  ingest.py  notes.py  rag.py
mcp-langgraph-rag/docker/: ingest.Dockerfile  mcp.Dockerfile
mcp-langgraph-rag/scripts/: __init__.py  build_index.py  demo_queries.py
mcp-langgraph-rag/tests/: test_mcp.py  test_rag.py
zennlogic_ai/: .env.example  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini
zennlogic_ai/docker/: api.Dockerfile  mcp.Dockerfile
zennlogic_ai/docs/: DEV.md
zennlogic_ai/infra/: README.md
zennlogic_ai/infra/cfn/: application.yaml  network.yaml  security.yaml  storage.yaml
zennlogic_ai/infra/nginx/: zennlogic-ai-nginx.conf
zennlogic_ai/infra/systemd/: genai-api.service  genai-mcp.service
zennlogic_ai/infra/user-data/: cloudinit.yaml
zennlogic_ai/scripts/: build_local_index.sh  dev_bootstrap.sh  format.sh  lint.sh  snapshot_pull_s3.sh  snapshot_push_s3.sh  test.sh  typecheck.sh
zennlogic_ai/src/service/: __init__.py  logging.py
zennlogic_ai/src/service/auth/: api_key.py
zennlogic_ai/src/service/aws/: s3.py  ssm.py
zennlogic_ai/src/service/llm/: chains.py  graph.py  providers.py
zennlogic_ai/src/service/mcp_server/: api.py  server.py
zennlogic_ai/src/service/mcp_server/tools/: health.py  rag.py  s3.py
zennlogic_ai/src/service/rag/: embeddings.py  pipeline.py
zennlogic_ai/src/service/rag/vector_backends/: annoy_backend.py  factory.py  faiss_backend.py
zennlogic_ai/src/service/rest/: __init__.py  app.py
zennlogic_ai/src/service/rest/routers/: chat.py  health.py  rag.py
zennlogic_ai/src/zennlogic_ai_service/: __init__.py  config.py
zennlogic_ai/src/zennlogic_ai_service/auth/: api_key.py
zennlogic_ai/src/zennlogic_ai_service/aws/: __init__.py  s3.py
zennlogic_ai/src/zennlogic_ai_service/llm/: chains.py
zennlogic_ai/src/zennlogic_ai_service/mcp_server/: server.py
zennlogic_ai/src/zennlogic_ai_service/mcp_server/tools/: health.py  rag.py
zennlogic_ai/src/zennlogic_ai_service/rag/: embeddings.py  models.py  pipeline.py
zennlogic_ai/src/zennlogic_ai_service/rag/vector_backends/: __init__.py  factory.py
zennlogic_ai/src/zennlogic_ai_service/rest/: app.py
zennlogic_ai/src/zennlogic_ai_service/rest/routers/: chat.py  rag.py
zennlogic_ai/tests/: conftest.py  test_auth.py  test_fastapi_client.py  test_health.py  test_mcp_http.py  test_mcp_server.py  test_rag_pipeline.py  test_rest_endpoints.py  test_vector_backend.py
